# Big2025

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  cmake_install.cmake  driver_exam_native  driver_exam_native.c  led_native  led_switch_native  led_switch_native.c  led_switch_toggle_native  main  main.c  memo  nohup.out  platformio.ini  students.txt  test.c
Bowling/: CMakeLists.txt  bowling  bowling.c  main  main.c  test  test.c
Bowling/include/: bowling.h
Bowling/src/: bowling.c  main.c
STL/: CMakeLists.txt  ex10_forClass.cpp  ex11_nullptr.cpp  ex12_constexprestion.cpp  ex13_array.cpp  ex14_priority_queue.cpp  ex15_unordered_map.cpp  ex16_tramsform.cpp  ex17_sort_fstream.cpp  ex17_sort_fstream2.cpp  ex18_execution.cpp  ex1_vector.cpp  ex2_string_vector.cpp  ex3_longest.cpp  ex4_string.cpp  ex5_string_find.cpp  ex6_iterator.cpp  ex7_map.cpp  ex8_vector_list1.cpp  ex8_vector_list2.cpp  ex9_lamda.cpp  student_example.cpp
STL/data_process/: data_process.cpp  data_process.hpp  main.cpp
STL/range_example/: main.cpp  processor.cpp  processor.hpp
aaatest/: Web.py  mmm.db  models.py  requirements.txt  test.py  test2.py
aaatest/logs/: result_log.txt
aaatest/routes/: __init__.py  index.py  login.py  oauth.py  recommend.py  reset.py  result.py  signup.py  upload.py
aaatest/templates/: index.html  loading.html  login.html  result.html  (+6 more)
atmega128/: bitarr.c  ch10_3_eeprom.c  ch10_4_mix.c  ch11_1_dc_delay.c  ch11_2_dc_delay.c  ch11_3_dc_delay.c  ch1_1_led.c  ch1_2_led2.c  ch1_3_led.c  ch3_3_lcd_switch.c  ch6_1_timer.c  ch6_2_timer.c  ch6_3_timer.c  ch6_3_timer2ledshift.c  ch7_1_pwmled.c  ch8_1_uart1.c  ch8_2_uart2.c  ch8_3_uart3.c  ch8_4_uart4.c  fndtimerpiezo.c  mysoulpiezo.c  piezo.c  servomotor.c
bowling/: CMakeLists.txt  db.md
bowling/include/: .env  bowling.h  bowlingsql.h
bowling/src/: bowling.c  main.c  score.c
c_example/: a.out  arithemectics  celsius2fah  celsius2fah.c  compare  compare2  compare2.c  ddd.c  far2celsius.c  fourBit2  fourBit2.c  genderRatio  genderRatio.c  increment  infinit.c  limit  limit.c  makefile  oddeven  sizeof  sizeof.c  test  test.c  triangle  triangle2
contents/: contents.md
cpp/: CMakeLists.txt
docker_test/: compose.yml  dockerfile  requirements.txt
ds/: list.c  strcpy  strcpy.c  testArray  testArray.c  testArray2  testArray2.c
learning/: mysql.md
ml_dl_python/: 03_numpy.ipynb  a01_jupyter.ipynb  a02_fish.ipynb  a04_numpy2.ipynb  a05_data_split.ipynb  a06_regression.ipynb  a07_linear_reg.ipynb  a08_polynomial_reg.ipynb  a09_classification.ipynb  a10_batch_slope.ipynb  a11_decision_tree.ipynb  a12_cross_varidation.ipynb  a13_random_forest.ipynb  a14_titanic.ipynb  a15_pandas.ipynb  a16_kmean.ipynb  a17_pca.ipynb  a18_transformer.ipynb  a23_rnn.ipynb  a25_gru.ipynb  a26_gym_cartpole_v1.ipynb  best-gru-model.keras  best-gru2-model.keras  best-gru3-model.keras
network/: CMakeLists.txt  mq_client.c  mq_server.c  pipe.c  pipe_server.c  shm_client  shm_semaphore.c  shm_test.c
opencv/part7/: 59_mnist_cnn.cpp  59_mnist_cnn_training.ipynb  60_google_vision.cpp  61_google_camera.cpp  62_dnnface.cpp  CMakeLists.txt  model_server.py
orange3/: .association.ows.swp.p  .orange_100_121.ows.swp.p  .orange_127_130.ows.swp.p  association.ows  associations.ipynb  bts.ows  corelation.py  covid19_orange.ows  health_new_data.csv  kmean.ows  orange_100_121.ows  orange_127_130.ows  orange_script01.py  orange_script02.py  stroke.ows
platfromIO/: platformio.ini
raspberryPi/: device_gpio.c  envTest  envTest.c  hard_tone_buzzer.c  hello.sh  helloRaspberry.c  i2c_brightness  i2c_brightness.c  i2c_rgb_led_switch  i2c_rgb_led_switch.c  i2c_rgb_random  i2c_rgb_random.c  i2c_servo  i2c_servo.c  led_pwm  makefile
selenium/: babmenu.py
smartpoint/: CMakeLists.txt  ex10_moveVector.cpp  ex11_moveClass.cpp  ex12_variantOptional.cpp  ex13_thread.cpp  ex14_asyncFuture.cpp  ex15_multithreadTask.cpp  ex16_2_finalModernExample.cpp  ex16_finalModernExample.cpp  ex17_final2.cpp  ex1_2_unique_ptr.cpp  ex1_unique_ptr.cpp  ex2_2_moveOperator.cpp  ex2_3_moveOperator.cpp  ex2_moveOperator.cpp  ex3_2_deleter.cpp  ex3_deleter.cpp  ex4_2_shared_ptr.cpp  ex4_shared_ptr.cpp  ex5_memoryLeak.cpp  ex6_weakedPtr.cpp  ex7_vectorSmart.cpp  ex8_treeSmart.cpp  ex9_forward.cpp  test
sqlQuery/: CMakeLists.txt  Makefile  bookSql  bookSql.c  cmake_install.cmake  createDbTable.sql  insertdata.sql  test.c  test2.c
sqlQuery/include/: booksql.h
sqlQuery/src/: bookSql.c  main.c
sqlQurry/: CMakeLists.txt  bookSql  bookSql.c  createDbTable.sql
src/: main.c  test.c  weather.c
testPython/: a04_print.py  a06_frame.py  a07_locals_vars.py  a10_input.py  a11_formatting.py  a13_comparion.py  data2.txt  example1.py  example2.py  example3.py  plugin.c  pythoninterpreter  pythoninterpreter.c  pythoninterpreter2  pythoninterpreter2.c  setup.py  setup2.py  snake.py  temp_py.py
testPython/poetry_test/: pyproject.toml  test_poetry.py
testPython/poetry_test/src/poetry_test/: __init__.py
(+623 files in other folders)
