cmake_minimum_required(VERSION 3.10)
project(MainProject)

# 내부 CMakeLists.txt 포함
# add_subdirectory(sqlQuery)
# add_subdirectory(c_example/part1)
# add_subdirectory(c_example/part2)
# add_subdirectory(c_example/part3)
# add_subdirectory(Bowling)
# # add_subdirectory(ds)
# # add_subdirectory(cpp)
# add_subdirectory(STL)
# add_subdirectory(smartpoint)
# add_subdirectory(network/ipc)
# add_subdirectory(network/tcp)
# add_subdirectory(network/udp)
# add_subdirectory(network/utile)
# add_subdirectory(network/multiProcess)
add_subdirectory(opencv/part1)