[project]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = [
    {name = "aa",email = "yeongjae.jeong@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4"
dependencies = [
    "requests (==2.28.1)"
]

[tool.poetry]
packages = [{include = "poetry_test", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
